# filler

./: CMakeLists.txt  Makefile  filler.h  iruban.filler  main.c  test
includes/: filler.h  get_next_line.h
libft/: ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_memcmp.c  ft_memcpy.c  ft_putchar.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strjoin.c  ft_strncpy.c  ft_strnew.c  ft_strstr.c  ft_strsub.c  lst_gnl.c
libft/includes/: libft.h
resources/: filler.trace  test  xui
srcs/: a.out  create_array.c  get_next_line.c  main.c  piece.c  set_pos.c
